fixed layout problems

--- a/less/overrides/restaurant-join.less
+++ b/less/overrides/restaurant-join.less
@@ -201,6 +201,12 @@ button.close {
   .large-text {
     font-size: 14px;
   }
+
+  .dollar-entry {
+    width: 98%;
+    display: inline-block;
+    float: right;
+  }
 }
 
 /* datetime popover TODO: move to component */
